# ai-memory-system

./: .dockerignore  .env.example  .gitignore  DOCKER_OPTIMIZATION_STORY.md  Dockerfile  PROJECT_OVERVIEW.md  Project_Architecture_Roadmap.md  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  pyproject.toml
data/benchmarks/: benchmark_results.json
docs/: FINAL_SUMMARY.md  OBSERVABILITY.md  REFACTORING_COMPLETE.md  REFACTOR_SUMMARY.md  STAGE2_COMPLETE.md  STAGE2_COMPLETION.md  STAGE2_DONE.md
grafana/dashboards/: ai_memory_system.json  ai_memory_system.json.backup
grafana/provisioning/dashboards/: ai_memory_system.yml
prometheus/: alerts.yml  prometheus.yml
scripts/: benchmark.py  continuous_traffic.sh  load_test.js  seed.py
src/ai_memory_system/: __init__.py  logging_config.py  main.py
tests/: test_endpoints.py  test_main.py
tests/ai_memory_system/: test_endpoints.py  test_main.py  test_observability.py
